
// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.mtbf.svc;

option go_package = "chromiumos/tast/services/mtbf/svc";

service HistogramService {
  // GetFirstBucket returns the first bucket with the requested name
  rpc GetFirstBucket (GetFirstBucketRequest) returns (GetFirstBucketResponse) {}
}

message GetFirstBucketRequest {
  string name = 1;
}

message GetFirstBucketResponse {
  int64 min = 1;
  int64 max = 2;
  int64 count = 3;
}